<resources>
    <string name="app_name">School Home Organiser</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">School Home Organiser</string>
    <string name="nav_header_subtitle">Education When it Counts</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_lesson">Lesson Notes</string>
    <string name="menu_meal_planner">Meal Planner</string>
    <string name="menu_schedule">Schedule</string>
    <string name="menu_external_links">Educational Links</string>
    <string name="menu_addLesson">Add Lesson</string>
    <string name="menu_setting">Settings</string>

    //
    <string name="day_monday">Monday</string>
    <string name="day_tuesday">Tuesday</string>
    <string name="day_wednesday">Wednesday</string>
    <string name="day_thursday">Thursday</string>
    <string name="day_friday">Friday</string>


    <string name="CompanyLogo">Company Logo</string>
    <string name="Welcome">Welcome</string>

    <string name="EducationLinks">Educational Links</string>

    <string name="saveButton">Save</string>

    <string name="Twinkl">Twinkl</string>
    <string name="MyTutor">My Tutor</string>
    <string name="TedEd">TED Ed</string>
    <string name="BiteSize">BBC BiteSize</string>
    <string name="Worksheet">Worksheetfun</string>
    <string name="school">School Run</string>

    <string name="addLessonTitle">Add a Lesson</string>


    <string-array name="settings_day">
        <item>- Select Day -</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
    </string-array>

    <string-array name="settings_lesson">
        <item>English - Reading</item>
        <item>English - Writing</item>
        <item>Maths</item>
        <item>Geography</item>
        <item>Science</item>
        <item>PE</item>
        <item>Break</item>
    </string-array>

    <string-array name="settings_start_time">
        <item>9:00</item>
        <item>10:00</item>
        <item>11:00</item>
        <item>12:00</item>
        <item>13:00</item>
        <item>14:00</item>
        <item>15:00</item>
        <item>16:00</item>
    </string-array>

    <string-array name="settings_break_time">
        <item>10:00 - 11:00</item>
        <item>11:00 - 12:00</item>
        <item>12:00 - 13:00</item>
        <item>13:00 - 14:00</item>
        <item>14:00 - 15:00</item>
        <item>15:00 - 16:00</item>
        <item>16:00 - 17:00</item>
    </string-array>

    <string-array name="settings_finish_time_one">
        <item>10:00</item>
        <item>11:00</item>
        <item>12:00</item>
        <item>13:00</item>
        <item>14:00</item>
        <item>15:00</item>
        <item>16:00</item>
        <item>17:00</item>
    </string-array>

    <string-array name="settings_finish_time_two">
        <item>11:00</item>
        <item>12:00</item>
        <item>13:00</item>
        <item>14:00</item>
        <item>15:00</item>
        <item>16:00</item>
        <item>17:00</item>
    </string-array>

    <string-array name="settings_finish_time_three">
        <item>12:00</item>
        <item>13:00</item>
        <item>14:00</item>
        <item>15:00</item>
        <item>16:00</item>
        <item>17:00</item>
    </string-array>

    <string-array name="settings_finish_time_four">
        <item>13:00</item>
        <item>14:00</item>
        <item>15:00</item>
        <item>16:00</item>
        <item>17:00</item>
    </string-array>

    <string-array name="settings_finish_time_five">
        <item>14:00</item>
        <item>15:00</item>
        <item>16:00</item>
        <item>17:00</item>
    </string-array>

    <string-array name="settings_finish_time_six">
        <item>15:00</item>
        <item>16:00</item>
        <item>17:00</item>
    </string-array>

    <string-array name="settings_finish_time_seven">
        <item>16:00</item>
        <item>17:00</item>
    </string-array>

    <string-array name="settings_finish_time_eight">
        <item>17:00</item>
    </string-array>

    <string name="container_des" translation_description="container for lessons.">Lesson Container</string>
    <string name="demoText">Here at School Home Organiser we know that choosing to home educate your child is no small undertaking. And yet, deciding to teach your child at home can be one of the most rewarding decisions you’ll ever make. So much so that, according to the BBC, the number of children being home schooled had risen by 40% in the three years prior to 2018! <br></br> Here at School Home Organiser we like to think we’re the one-stop shop for all your queries and questions about home education. We’ll be your helpful hero and your educational guide, with you every step of the way; from the moment you make the decision to the day your child takes their GCSEs.</string>
    <string name="dayLabel">Day:</string>
    <string name="label_lesson">Lesson:</string>
    <string name="label_startTime">Start Time:</string>
    <string name="label_endTime">End Time:</string>
    <string name="label_breakTime">Break Time:</string>

    <!-- Output to TextView styled with a little HTML -->
    <string name="title"><![CDATA[<h2>Lesson Notes</h2>]]></string>
    <string name="start_time"><![CDATA[<b>Start: </b>]]></string>
    <string name="end_time"><![CDATA[<b>End: </b>]]></string>
    <string name="lesson"><![CDATA[<b>Lesson: </b>]]></string>



    <string name="education_text">A collection of educational links have been put together and listed below.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_label">Start:</string>
    <string name="finish_label">Finish:</string>
    <string name="ReadNoteButton">Read Notes</string>
    <string name="addButton">Add</string>
    <string name="Read">Read</string>
    <string name="backButton">Back</string>
    <string name="addLessonNotesLabel">Add Lesson Notes</string>
    <string name="addNotesButton">Add Notes</string>
    <string name="weatherIcon">Image that changes depending on weather</string>
    <string name="checkButton">Check</string>
    <string name="other">other</string>
    <string name="selectDay">Select a Day</string>

    <string name="lessonSchedule"><![CDATA[<h1>Schedule Information</h1><br>]]></string>

</resources>