<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_lesson"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_lesson" />
        <item
            android:id="@+id/nav_mealPlanner"
            android:icon="@drawable/ic_baseline_restaurant_24"
            android:title="@string/menu_meal_planner" />

        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_baseline_schedule_24"
            android:title="@string/menu_schedule" />
        <item
            android:id="@+id/nav_links"
            android:icon="@drawable/ic_baseline_link_24"
            android:title="@string/menu_external_links" />
        <item
            android:id="@+id/nav_addLesson"
            android:icon="@drawable/add_lesson"
            android:title="@string/menu_addLesson" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/menu_setting" />
    </group>
</menu>