<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/side_nav_bar"
    tools:context=".ui.settings.SettingsFragment">

    <TextView
        android:id="@+id/text_Home_Settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="23sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="120dp"
        android:layout_height="107dp"
        android:src="@drawable/school"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/CompanyLogo" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/tilebackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/home_text_background"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_Home_Settings">

        <TextView
            android:id="@+id/textSettings_Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/menu_setting"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_labelDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginTop="30dp"
            android:text="@string/dayLabel"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/daySpinner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textSettings_Title" />

        <Spinner
            android:id="@+id/daySpinner"
            android:background="@drawable/dropdown_settings"
            android:layout_marginRight="10dp"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textSettings_Title" />

        <Spinner
            android:id="@+id/lessonSpinner"
            android:background="@drawable/dropdown_settings"
            android:layout_marginRight="10dp"
            android:layout_width="210dp"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/daySpinner" />

        <Spinner
            android:id="@+id/startTimeSpinner"
            android:background="@drawable/dropdown_settings"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lessonSpinner" />

        <Spinner
            android:id="@+id/endTimeSpinner"
            android:background="@drawable/dropdown_settings"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/startTimeSpinner" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:text="@string/saveButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/endTimeSpinner" />

        <TextView
            android:id="@+id/text_LabelLesson"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginTop="35dp"
            android:textSize="20sp"
            android:text="@string/label_lesson"
            app:layout_constraintEnd_toStartOf="@+id/lessonSpinner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_labelDay" />

        <TextView
            android:id="@+id/text_LabelStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginTop="28dp"
            android:text="@string/label_startTime"
            app:layout_constraintEnd_toStartOf="@+id/startTimeSpinner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_LabelLesson" />

        <TextView
            android:id="@+id/text_LabelEndTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginTop="30dp"
            android:text="@string/label_endTime"
            app:layout_constraintEnd_toStartOf="@+id/endTimeSpinner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_LabelStart" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>